--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,13 +65,30 @@ header nav ul li a:hover {
     border-radius: 15px;
     text-shadow: none;
   }
-
+/* HERO STYLING */
 .hero{
-    border: 3px solid lime;
-    color: var(--primary-color);
+    border: 2px solid red;
+    color: var(--secondary-color);
+    background-image: url(../images/cool-img.jpg);
 }
 
 div img{
     width: 350px;
     height: 350px;
+}
+
+/* ABOUT STYLING */
+.container-1{
+    border: 2px solid red;
+    background-image: url(../images/cool-img.jpg);
+}
+
+/* PORTFOLIO STYLING */
+.container-2{
+    border: 2px solid red;
+}
+
+/*CONTACT STYLING */
+.contact{
+    border: 2px solid red;
 }
