--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,23 +72,58 @@ header nav ul li a:hover {
     background-image: url(../images/cool-img.jpg);
 }
 
-div img{
+.yes p{
+    display: flex;
+}
+
+.live{
+    display: flex;
+}
+
+.live img{
     width: 350px;
     height: 350px;
 }
 
 /* ABOUT STYLING */
 .container-1{
-    border: 2px solid red;
-    background-image: url(../images/cool-img.jpg);
+    display: flex;
+}
+
+.about{
+    font-size: 35px;
+}
+
+.bio{
+    border-left: 3px solid purple;
+    display: flex;
 }
 
 /* PORTFOLIO STYLING */
 .container-2{
-    border: 2px solid red;
+    display: flex;
+}
+
+.box-1 h3{
+    font-size: 35px;
+}
+
+.box-2, .box-3{
+    display: flex 1;
+    border: 1px solid lime;
 }
 
 /*CONTACT STYLING */
 .contact{
-    border: 2px solid red;
+    display: flex;
+}
+
+
+
+.tact h3{
+    font-size: 35px;
+}
+
+address{
+    border-left: 3px solid purple;
 }
