--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,10 @@ header nav ul li a:hover {
     font-weight: bolder;
 }
 
+.fly:hover{
+    color: rgb(75, 204, 0);
+}
+
 .live img{
     width: 350px;
     height: 500px;
@@ -107,42 +111,74 @@ header nav ul li a:hover {
 /* ABOUT STYLING */
 .container-1{
     display: flex;
+    margin: 3.5%;
 }
 
 .about{
-    font-size: 35px;
+    font-size: 45px;
+    padding-right: 30px;
+    
 }
 
 .bio{
-    border-left: 3px solid purple;
+    border-left: 3px solid rgb(0, 0, 0);
     display: flex;
+    font-size: 25px;
+    line-height: 1.2;
 }
 
 /* PORTFOLIO STYLING */
 .container-2{
     display: flex;
+    margin: 3.5%;
+    justify-content: space-evenly;
 }
 
-.box-1 h3{
+.container-2 h3{
+    font-size: 45px;
+    padding-right: 30px;
+    align-items: center;
+    border-right: 3px solid rgb(0, 0, 0);
+}
+
+.box-2{
     font-size: 35px;
 }
 
-.box-2, .box-3{
-    display: flex 1;
-    border: 1px solid lime;
+.box-2:hover{
+    border: 4px solid var(--secondary-color);
 }
+
+.box-3{
+    flex: 1;
+    font-size: 35px;
+}
+
+.box-3 img{
+    width: 550px;
+    height: 176px;
+}
+
+.box-3:hover{
+    border: 4px solid var(--secondary-color);
+}
+
+
 
 /*CONTACT STYLING */
 .contact{
     display: flex;
+    margin: 3.5%;
 }
 
 
 
 .tact h3{
-    font-size: 35px;
+    font-size: 45px;
+    padding-right: 30px;
 }
 
 address{
-    border-left: 3px solid purple;
+    border-left: 3px solid rgb(0, 0, 0);
+    font-size: 35px;
 }
