--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,7 @@ header{
     justify-content: space-between;
     display: flex;
     padding: 20px 35px;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-position: 80%;
+   
     z-index: 9999;
 }
 
@@ -109,12 +106,12 @@ header nav ul li a:hover {
 }
 
 /* ABOUT STYLING */
-.container-1{
+.About{
     display: flex;
     margin: 3.5%;
 }
 
-.about{
+.me{
     display: flex;
     font-size: 45px;
     padding-right: 30px;
@@ -122,7 +119,7 @@ header nav ul li a:hover {
 }
 
 .bio{
-    border-left: 3px solid rgb(0, 0, 0);
+    border-left: 6px solid rgb(0, 0, 0);
     display: flex;
     font-size: 25px;
     line-height: 1.2;
@@ -130,17 +127,42 @@ header nav ul li a:hover {
 }
 
 /* PORTFOLIO STYLING */
-.container-2{
+.portfolio{
     display: flex;
     margin: 3.5%;
     justify-content: space-evenly;
 }
 
-.container-2 h3{
+.portfolio h3{
     font-size: 45px;
     padding-right: 30px;
     align-items: center;
-    border-right: 3px solid rgb(0, 0, 0);
+    border-right: 6px solid rgb(0, 0, 0);
+}
+
+.portfolios{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.box-1{
+    flex: 1;
+    font-size: 35px;
+    padding: 0 30px;
+}
+
+.box-1 img{
+    border-radius: 15px;
+    border: 5px solid var(--primary-color);
+    width: 550px;
+    height: 176px;
+}
+
+.box-1 img:hover{
+    border: 5px solid var(--secondary-color);
 }
 
 .box-2{
@@ -160,30 +182,11 @@ header nav ul li a:hover {
     border: 5px solid var(--secondary-color);
 }
 
-.box-3{
-    flex: 1;
-    font-size: 35px;
-    padding: 0 30px;
-}
-
-.box-3 img{
-    border-radius: 15px;
-    border: 5px solid var(--primary-color);
-    width: 550px;
-    height: 176px;
-}
-
-.box-3 img:hover{
-    border: 5px solid var(--secondary-color);
-}
-
 /*CONTACT STYLING */
 .contact{
     display: flex;
     margin: 3.5%;
 }
-
-
 
 .tact h3{
     font-size: 45px;
@@ -191,6 +194,26 @@ header nav ul li a:hover {
 }
 
 address{
-    border-left: 3px solid rgb(0, 0, 0);
+    border-left: 6px solid rgb(0, 0, 0);
     font-size: 35px;
+    padding-left: 30px;
+}
+
+
+@media all and (max-width: 980px){
+    header{
+        display: contents;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 25px;
+    } 
+
+
 }
