--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ header nav ul li a:hover {
 .bio{
     border-left: 6px solid rgb(0, 0, 0);
     display: flex;
+    flex-wrap: wrap;
     font-size: 30px;
     line-height: 1.2;
     padding: 0 30px;
@@ -139,14 +140,36 @@ header nav ul li a:hover {
     padding-right: 30px;
 }
 
+.box-1 img{
+    border: 4px solid var(--primary-color);
+}
+
+.box-1 img:hover{
+    border: 4px solid var(--secondary-color);
+}
+
 .box-2 img{
     width: 525px;
     height: 200px;
+    border: 4px solid var(--primary-color);
+}
+
+.box-2 img:hover{
+    width: 525px;
+    height: 200px;
+    border: 4px solid var(--secondary-color);
 }
 
 .box-3 img{
     width: 525px;
     height: 200px;
+    border: 4px solid var(--primary-color);
+}
+
+.box-3 img:hover{
+    width: 525px;
+    height: 200px;
+    border: 4px solid var(--secondary-color);
 }
 
 .portfolios{
@@ -202,6 +225,7 @@ address{
         padding: 30px 15px;
         width: 100%;
     }
+
 }
 
 @media all and (max-width: 575px){
