--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,8 @@ header nav ul li a:hover {
 
 .box-1 img{
     border: 4px solid var(--primary-color);
+    width: 700px;
+    height: 450px;
 }
 
 .box-1 img:hover{
@@ -176,7 +178,6 @@ header nav ul li a:hover {
     font-size: 25px;
     width: 100%;
     margin: 0 auto;
-    display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
