--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,10 @@ header h1 {
     color: var(--primary-color);
     margin: 0;
     } 
+
+header h1:hover{
+    color: var(--secondary-color);
+}    
     
 header a {
     text-decoration: none;
@@ -78,15 +82,15 @@ header nav ul li a:hover {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.yes{
+.intro{
     margin: 3.5%;
 }
 
-.yes h2{
+.intro h2{
     font-size: 50px;
 }
 
-.yes p{
+.intro p{
     display: flex;
     font-size: 25px;
     line-height: 1.3;
@@ -98,6 +102,7 @@ header nav ul li a:hover {
 
 .fly:hover{
     color: rgb(75, 204, 0);
+    font-size: 30px;
 }
 
 .live img{
@@ -128,9 +133,8 @@ header nav ul li a:hover {
 }
 
 /* PORTFOLIO STYLING */
-.portfolio{
-    margin: 20px;
-    display: flex;
+.portfolio, h4{
+   font-weight: bolder;
 }
    
 
@@ -138,15 +142,18 @@ header nav ul li a:hover {
     font-size: 45px;
     border-right: 6px solid rgb(0, 0, 0);
     padding-right: 30px;
+    
 }
 
 .box-1 img{
     border: 4px solid var(--primary-color);
     width: 700px;
-    height: 450px;
+    height: 700px;
 }
 
 .box-1 img:hover{
+    width: 800px;
+    height: 800px;
     border: 4px solid var(--secondary-color);
 }
 
@@ -157,8 +164,8 @@ header nav ul li a:hover {
 }
 
 .box-2 img:hover{
-    width: 525px;
-    height: 200px;
+    width: 600px;
+    height: 300px;
     border: 4px solid var(--secondary-color);
 }
 
@@ -169,10 +176,60 @@ header nav ul li a:hover {
 }
 
 .box-3 img:hover{
-    width: 525px;
-    height: 200px;
+    width: 600px;
+    height: 300px;
     border: 4px solid var(--secondary-color);
 }
+
+.box-4 img{
+    width: 525px;
+    height: 200px;
+    border: 4px solid var(--primary-color);
+}
+
+.box-4 img:hover{
+    width: 600px;
+    height: 300px;
+    border: 4px solid var(--secondary-color);
+}
+
+.box-5 img{
+    width: 525px;
+    height: 200px;
+    border: 4px solid var(--primary-color);
+}
+
+.box-5 img:hover{
+    width: 600px;
+    height: 300px;
+    border: 4px solid var(--secondary-color);
+}
+
+.box-6 img{
+    width: 525px;
+    height: 200px;
+    border: 4px solid var(--primary-color);
+}
+
+.box-6 img:hover{
+    width: 600px;
+    height: 300px;
+    border: 4px solid var(--secondary-color);
+}
+
+.box-7 img{
+    width: 525px;
+    height: 200px;
+    border: 4px solid var(--primary-color);
+}
+
+.box-7 img:hover{
+    width: 600px;
+    height: 300px;
+    border: 4px solid var(--secondary-color);
+}
+
+
 
 .portfolios{
     font-size: 25px;
