adding projects and css styling to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,9 +133,9 @@ header nav ul li a:hover {
 }
 
 /* PORTFOLIO STYLING */
-.portfolio, h4{
+/* .portfolio, h4{
    font-weight: bolder;
-}
+} */
    
 
 .works{
