--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,100 +133,8 @@ header nav ul li a:hover {
 }
 
 /* PORTFOLIO STYLING */
-/* .portfolio, h4{
-   font-weight: bolder;
-} */
-   
-
-.works{
-    font-size: 45px;
-    border-right: 6px solid rgb(0, 0, 0);
-    padding-right: 30px;
-    
-}
-
-.box-1 img{
-    border: 4px solid var(--primary-color);
-    width: 700px;
-    height: 700px;
-}
-
-.box-1 img:hover{
-    width: 800px;
-    height: 800px;
-    border: 4px solid var(--secondary-color);
-}
-
-.box-2 img{
-    width: 525px;
-    height: 200px;
-    border: 4px solid var(--primary-color);
-}
-
-.box-2 img:hover{
-    width: 600px;
-    height: 300px;
-    border: 4px solid var(--secondary-color);
-}
-
-.box-3 img{
-    width: 525px;
-    height: 200px;
-    border: 4px solid var(--primary-color);
-}
-
-.box-3 img:hover{
-    width: 600px;
-    height: 300px;
-    border: 4px solid var(--secondary-color);
-}
-
-.box-4 img{
-    width: 525px;
-    height: 200px;
-    border: 4px solid var(--primary-color);
-}
-
-.box-4 img:hover{
-    width: 600px;
-    height: 300px;
-    border: 4px solid var(--secondary-color);
-}
-
-.box-5 img{
-    width: 525px;
-    height: 200px;
-    border: 4px solid var(--primary-color);
-}
-
-.box-5 img:hover{
-    width: 600px;
-    height: 300px;
-    border: 4px solid var(--secondary-color);
-}
-
-.box-6 img{
-    width: 525px;
-    height: 200px;
-    border: 4px solid var(--primary-color);
-}
-
-.box-6 img:hover{
-    width: 600px;
-    height: 300px;
-    border: 4px solid var(--secondary-color);
-}
-
-.box-7 img{
-    width: 525px;
-    height: 200px;
-    border: 4px solid var(--primary-color);
-}
-
-.box-7 img:hover{
-    width: 600px;
-    height: 300px;
-    border: 4px solid var(--secondary-color);
+.project {
+    font-size: 75px;
 }
 
 
@@ -255,51 +163,4 @@ address{
     border-left: 6px solid rgb(0, 0, 0);
     font-size: 35px;
     padding-left: 30px;
-}
-
-
-@media all and (max-width: 980px){
-    header{
-        display: contents;
-    }
-
-    header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
-    }
-
-    header nav ul li a {
-        font-size: 25px;
-    } 
-
-    .portfolios{
-        width: 100%;
-    }
-}
-
-@media all and (max-width: 768px){
-    .portfolios{
-        padding: 30px 15px;
-        width: 100%;
-    }
-
-}
-
-@media all and (max-width: 575px){
-    .portfolios{
-        flex: 0 100%;
-    }
-    
-    address{
-        font-size: 20px;
-    }
-
-    .me{
-        font-size: 20px;
-    }
-
-    .bio{
-        font-size: 12px;
-    }
 }
