fixed text and styling for bar finder proj 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,13 +139,13 @@ header nav ul li a:hover {
 
 
 
-.portfolios{
+/* .portfolios{
     font-size: 25px;
     width: 100%;
     margin: 0 auto;
     flex-wrap: wrap;
     justify-content: space-around;
-}
+} */
 
 
 /*CONTACT STYLING */
