--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,38 +74,12 @@ header nav ul li a:hover {
 /* HERO STYLING */
 .hero{
     background-attachment: fixed;
-    color: var(--primary-color);
     background-image: url(../images/cool-img.jpg);
     background-size: cover;
     display: flex;
-    justify-content: center;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.intro{
-    margin: 3.5%;
-}
-
-.intro h2{
-    font-size: 50px;
-}
-
-.intro p{
-    display: flex;
-    font-size: 25px;
-    line-height: 1.3;
-}
-
-.fly{
-    font-weight: bolder;
-}
-
-.fly:hover{
-    color: rgb(75, 204, 0);
-    font-size: 30px;
-}
-
-.live img{
+.image{
     width: 350px;
     height: 500px;
 }
@@ -114,26 +88,12 @@ header nav ul li a:hover {
     font-size: 75px;
 }
 
-/* PORTFOLIO STYLING */
+/* project section */
 .project {
     font-size: 75px;
 }
 
-
-
-/*CONTACT STYLING */
-.contact{
-    display: flex;
-    margin: 3.5%;
-}
-
-.tact h3{
-    font-size: 45px;
-    padding-right: 30px;
-}
-
-address{
-    border-left: 6px solid rgb(0, 0, 0);
-    font-size: 35px;
-    padding-left: 30px;
+/* contact section */
+.contact {
+    font-size: 75px;
 }
